[package]
name = "every_day_algorithm"
version = "0.0.0"
authors = ["charlie <take3812@gmail.com>"]
edition = "2021"

[dependencies]
rand = "0.8.5"
sdl2 = { version = "0.37", features = [
    "bundled",
    "static-link",
    "gfx",
    "image",
    "ttf",
] }
cpal = "0.15"
ringbuf = { version = "0.3", features = ["default"] }
